--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
-    
+    "bcrypt": "^0.8.7",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
+    "jsonwebtoken": "^7.1.7",
+    "mongoose": "^4.5.8",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7"
   }
 }
